--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <script>
     let data = [
       {
-        "originale": "When in Rome, do as the Romans do.",
-        "traduzione": "Quando sei a Roma, comportati come i Romani.",
+        "originale": "Meije 'na Pasque che cente Pasqueltte",
+        "traduzione": "Meglio una Pasqua che cente Pasquette (Se devi fare qualcosa, fanne una e bene",
         "vocale": "rome.mp3",
         "tags": "viaggi usanze cultura"
       },
       {
-        "originale": "Better late than never.",
+        "originale": "Chi troppe s?abbasse lu cule se scopre",
         "traduzione": "Meglio tardi che mai.",
         "vocale": "late.mp3",
         "tags": "tempo pazienza"
