--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
         "vocale": "late.mp3",
         "tags": "tempo pazienza"
       }
+      {
+  "originale": "Chi à pijte ò uaje",
+  "traduzione": "Chi ha pietà ha guai",
+  "vocale": "rome.mp3",
+  "tags": "lupo"
+},
     ];
 
     function search() {
