--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         "tags": "viaggi usanze cultura"
       },
       {
-        "originale": "Chi troppe s?abbasse lu cule se scopre",
+        "originale": "Chi troppe s'abbasse lu cule se scopre",
         "traduzione": "Meglio tardi che mai.",
         "vocale": "late.mp3",
         "tags": "tempo pazienza"
@@ -35,7 +35,7 @@
   "traduzione": "Chi ha pietà ha guai",
   "vocale": "rome.mp3",
   "tags": "lupo"
-},
+}
     ];
 
     function search() {
