--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     let data = [
       {
         "originale": "Meije 'na Pasque che cente Pasqueltte",
-        "traduzione": "Meglio una Pasqua che cente Pasquette (Se devi fare qualcosa, fanne una e bene",
+        "traduzione": "Meglio una Pasqua che cento Pasquette (Anziché fare molte cose, fanne una e bene",
         "vocale": "rome.mp3",
         "tags": "viaggi usanze cultura"
       },
       {
         "originale": "Chi troppe s'abbasse lu cule se scopre",
-        "traduzione": "Meglio tardi che mai.",
+        "traduzione": "A volte la modestia viene confusa con arrendevolezza .",
         "vocale": "late.mp3",
         "tags": "tempo pazienza"
       },
